[package]
name = "dotman"
version = "0.1.0"
authors = ["shirokuro <46kuro212@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
dirs = "3.0"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
